# nomad_backend

./: Cargo.toml  README.md  canister_ids.json  dfx.json
script/: candid.sh
src/nomad_backend_backend/: Cargo.toml  README.md  nomad_backend_backend.did
src/nomad_backend_backend/src/: brc20_canister_did.rs  lib.rs
src/nomad_backend_backend/src/address/: taproot.rs
src/nomad_backend_backend/src/api/: send_tx.rs
src/nomad_backend_backend/src/bitcoin_wallet/: common.rs  mod.rs  p2tr_key_only.rs  schnorr_api.rs
src/nomad_backend_backend/src/psbt/: builder.rs  mod.rs  transaction.rs  types.rs
src/nomad_backend_backend/src/sign/: deploy_contract.rs
src/nomad_backend_backend/src/tx/: credit.rs  decode.rs  mod.rs
src/nomad_backend_backend/src/wallet/: mod.rs
src/random_backend/: main.mo
test/: Cargo.toml
test/src/: brc20.rs  deploy.rs  ido_did.rs  main.rs  mint.rs  utils.rs
