[package]
name = "test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.32.5", features = ["std", "rand-std"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
hex = "0.4.3"
serde_json = "1.0.138"
ic-agent = "0.39.3"
candid = "0.10.13"
ic-cdk = "0.17.1"
dotenv = "0.15.0"
